# Jadeer

./: .gitignore  docker-compose.yml  start_services.bat
.claude/: settings.local.json
APIGateway/: .env.example  Dockerfile  config.py  main.py  requirements.txt
APIGateway/core/: exceptions.py  middleware.py  security.py
APIGateway/routes/: assessment_proxy.py  auth_proxy.py  cert_proxy.py  contact.py  cv_proxy.py  profile_proxy.py  ranking_proxy.py  recommendation_proxy.py
APIGateway/services/: service_registry.py
APIGateway/utils/: http_client.py
CV_Service/: .env  .env.example  Dockerfile  config.py  main.py  requirements.txt
CV_Service/clients/: profile_client.py
CV_Service/templates/: ats_reportlab.py
Cert_Ver_Service/: .env.example  Dockerfile  database.py  main.py  requirements.txt  schemas.py
Profile_Service/: .env  .env.example  Dockerfile  main.py  requirements.txt
Ranking_Service/: Dockerfile  config.py  docker-compose.yml  env.example  main.py  ranking.py  requirements.txt  service_registry.py
Recommendation_Service/: .env.example  Dockerfile  config.py  main.py  requirements.txt
SkillsAssement/: .env.example  Dockerfile  README.md  Skills.xlsx  app.py  create_assessment_results_table.sql  main.py  requirements.txt  stremlitapp.py
dev/: _shared.js  assessment.html  cv.html  index.html  profile.html  ranking.html  recommendation.html  shared.css
models/: pyproject.toml
models/jadeer_models.egg-info/: PKG-INFO  SOURCES.txt
models/models/: certificates.py  education.py  experiences.py  profile.py  skills.py
(+44 files in other folders)
