[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "jadeer-models"
version = "0.1.0"
description = "Shared Pydantic models for Jadeer microservices"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[tool.setuptools]
packages = ["models"]

[tool.setuptools.package-dir]
Models = "."